# crumpet-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  OpenGL.sln  README.md  TODO.txt  cmake_install.cmake  crumpet-engine.sln
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  stb_image.c  stb_image.h  texture.cpp  texture.h
OpenGL/headers/: mesh.h  shader.h
crumpet-engine/: Game.cpp  camera.cpp  camera.h  crumpet-engine.h  crumpet-engine.vcxproj  crumpet-engine.vcxproj.filters  display.cpp  display.h  entity.cpp  entity.h  game.cpp  game.h  gameWorld.cpp  gameWorld.h  level.cpp  level.h  logger.cpp  logger.h  main.cpp  mathHelper.cpp  mathHelper.h  rect.cpp  rect.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  timer.cpp  timer.h
crumpet-engine/include/: crumpet-engine - Shortcut.lnk
enc_temp_folder/5551d2a54452ad9e5ef6510d4fdefe5/: main.cpp
include/: colour.h  include.h  logger.h
resources/shaders/: col_fragment.glsl  gradient_fragment.glsl  simple2d_fragment.glsl  simple2d_vertex.glsl  tex_fragment.glsl
src/: header.cpp  header.h  main.cpp
src/crumpet-engine/: crumpet-engine.h  game.cpp  game.h  math.h  rect.cpp  rect.h
src/crumpet-engine/entitymanager/: entity.cpp  entity.h  entitybase.cpp  entitybase.h  entitymanager.cpp  entitymanager.h
src/crumpet-engine/input/: input.cpp  input.h  keyboard.h  mouse.h
src/crumpet-engine/renderengine/: renderer.cpp  renderer.h
src/crumpet-engine/resourcemanager/: resourcemanager.h  texturemanager.cpp  texturemanager.h
src/include/: include.h
